<resources>
    <string name="app_name">Cheffy</string>

    <string name="facebook_app_id">552711248798322</string>
    <string name="fb_login_protocol_scheme">fb552711248798322</string>

    <string name="default_notification_channel_id">com.app.cheffyuser.DEFAULT</string>
    <string name="places_apikey">AIzaSyCeHle5CvjUpU8mlK1hpeDGVmpu8kuET6o</string>
    <string name="maps_apikey">AIzaSyDkiiriAP2yyyDbw0Tenf0XkEAxzoL-agg</string>
    <string name="stripe_pub_key"></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_bottom_nav">Cheffy</string>

    <string name="dummy_text">Grilled salmon Genius Kitchen has a massive collection of recipes that are submitted, rated and reviewed by people who are passionate about food. From</string>

    <string name="text">Season salmon fillets with lemon pepper, garlic powder, and salt. In a small bowl, stir together soy sauce, brown sugar, water, and vegetable oil until sugar is dissolved. Preheat grill for medium heat. Lightly oil grill grate.</string>
    <string name="the_food_at_mashiko">The food at Mashiko is amazing. Everyone else already said everything about the food so there isn\'t much to add. It really is what everyone says</string>
    <string name="add_delivery_note">Add delivery note</string>
    <string name="txt_address">2179 Brooklyn Street</string>
    <string name="txt_city">New York</string>
    <string name="shipping">Shipping</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="you_not_connected">You\'re not connected</string>
    <string name="signout">Logout</string>
    <string name="you_re_almost_set">You\'re almost set</string>
    <string name="retry">Retry</string>
    <string name="password">Password</string>
    <string name="contentdesc">content description</string>
    <string name="email_address">Email address</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="cancel">Cancel</string>
    <string name="choose_new_pass">Choose a new password</string>
    <string name="new_pass">New Password</string>
    <string name="view_all">View All</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload_your_food_picture">Upload your food picture</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="take_photo">Take a Photo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="next">Next</string>
    <string name="retake">Retake</string>
    <string name="name_of_your_food">Name of your food</string>
    <string name="food_description">Food Description</string>
    <string name="cannot_connect">Can\'t connect</string>
    <string name="primary_text">primary text</string>
    <string name="secondary_text">secondary text</string>

    <string name="filled_bullet">\u25CF</string>
    <string name="continue_txt">Continue</string>
    <string name="search_food_txt">Find a food or Restaurant</string>
    <string name="view_item_cart">View Item Cart</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="delivery">Delivery</string>
    <string name="pickup_order">Pickup order</string>
    <string name="your_address_appear">Your addresses appear here</string>
    <string name="your_fav_appear">Your favourites appear here</string>
    <string name="your_cards_appear">Your payment options appear here</string>

</resources>
