<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/white"
        app:behavior_hideable="true"
        app:layout_behavior="@string/bottom_sheet_behavior"
        >

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/tv_header"
                android:text="@string/take_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/textSecondaryColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                />

        <ImageButton
                android:id="@+id/im_camera"
                android:layout_width="28dp"
                android:layout_height="24dp"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                android:contentDescription="@string/contentdesc"
                app:layout_constraintTop_toTopOf="@+id/tv_camera"
                app:srcCompat="@drawable/ic_camera"
                app:layout_constraintBottom_toBottomOf="@+id/tv_camera"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:tint="@color/grey_60"/>

        <ImageButton
                android:id="@+id/im_gallery"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                android:contentDescription="@string/contentdesc"
                app:srcCompat="@drawable/ic_photogallery"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_gallery"
                app:layout_constraintBottom_toBottomOf="@+id/tv_gallery"
                android:tint="@color/grey_60"/>

        <TextView
                android:text="@string/gallery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_gallery"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="18sp"
                app:layout_constraintHorizontal_bias="0.0"
                android:textColor="@color/textPrimaryColor"
                android:padding="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_camera"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/im_gallery"
                android:layout_marginStart="16dp"/>

        <TextView
                android:text="@string/camera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_camera"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="18sp"
                android:textColor="@color/textPrimaryColor"
                android:padding="8dp"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_header"
                app:layout_constraintStart_toEndOf="@+id/im_camera"
                android:layout_marginStart="16dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>