<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/bgColor"
        android:orientation="vertical">

    <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/confirm_action"
            style="@style/RippleStyleDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageButton
                    android:id="@+id/drop_loc_img"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/contentdesc"
                    android:scaleType="fitCenter"
                    android:tint="@color/drawableSecondaryColor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_mappin" />

            <TextView
                    android:id="@+id/drop_prim_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="4dp"
                    android:singleLine="true"
                    android:text="@string/primary_text"
                    android:textColor="@color/textPrimaryColor"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/drop_loc_img"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView
                    android:id="@+id/drop_seco_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:singleLine="true"
                    android:text="@string/secondary_text"
                    android:textColor="@color/textSecondaryColor"
                    android:textSize="12sp"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/drop_loc_img"
                    app:layout_constraintTop_toBottomOf="@+id/drop_prim_txt" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.balysv.materialripple.MaterialRippleLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/contentDividerLine"
            android:visibility="gone" />

</LinearLayout>