<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_activity"
    tools:context=".create_account.activities.VerifyEmailActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        android:elevation="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/addphone_close"
                android:layout_width="40dp"
                android:layout_height="?actionBarSize"
                android:layout_marginStart="8dp"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                app:layout_constraintStart_toStartOf="parent"
                android:tint="@color/black"
                app:srcCompat="@drawable/ic_left"
                app:layout_constraintBottom_toBottomOf="parent"
                android:onClick="close"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                style="@style/Toolbar.Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:visibility="gone"
                android:text="@string/forget_password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/contentdesc"
            app:srcCompat="@drawable/logo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/sailec_medium"
            android:gravity="center"
            android:text="Enter 4- digit code\nwe have sent received in your email" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout2"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_border2"
            android:ems="10"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:padding="20dp" />

        <EditText
            android:id="@+id/et2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_border2"
            android:ems="10"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:padding="20dp" />

        <EditText
            android:id="@+id/et3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_border2"
            android:ems="10"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:padding="20dp" />

        <EditText
            android:id="@+id/et4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_border2"
            android:ems="10"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:padding="20dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_bg_default"
        android:elevation="16dp"
        android:shadowColor="@color/btn_shadow"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:ems="10"
        android:fontFamily="@font/sailec_medium"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/continue_txt"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout3" />

    <Button
        android:id="@+id/btnChange"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_bg_border"
        android:elevation="10dp"
        android:fontFamily="@font/sailec_medium"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="#090909"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_continue" />

</androidx.constraintlayout.widget.ConstraintLayout>